--- a/passphrase/Resources/layout/GenerateEntropy.axml
+++ b/passphrase/Resources/layout/GenerateEntropy.axml
@@ -19,5 +19,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/outputTextView" />
+        android:id="@+id/outputTextView"
+        android:textIsSelectable="true" />
 </LinearLayout>
