--- a/passphrase/Resources/layout/PasswordTlanslator.axml
+++ b/passphrase/Resources/layout/PasswordTlanslator.axml
@@ -37,5 +37,6 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/translatedtextView" />
+        android:id="@+id/translatedtextView"
+        android:textIsSelectable="true" />
 </LinearLayout>
